--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "env": "^0.0.2",
@@ -15,8 +16,12 @@
     "http-errors": "^2.0.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0",
     "scripts": "^0.1.0"
   }
 }
