--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
+    "passport-google-auth": "^1.0.2",
     "passport-google-oauth": "^2.0.0",
     "scripts": "^0.1.0"
   }
