--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js -e hbs,js,css",
-    "start": "node app.js"
+    "start": "node app.js",
+    "seeds": "node ./bin/seeds.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
